--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dockerfile-generator",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "description": "Dockerfile generator for NodeJS",
   "main": "index.js",
   "scripts": {
@@ -26,6 +26,8 @@
     "istanbul": "0.4.5"
   },
   "dependencies": {
+    "gulp": "^4.0.0",
+    "gulp-eslint": "^5.0.0",
     "jsonschema": "^1.2.4"
   }
 }
