--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "eslint": "5.15.3",
     "mocha": "6.0.2",
     "should": "13.2.3",
-    "istanbul": "0.4.5"
+    "istanbul": "0.4.5",
+    "gulp": "^4.0.0",
+    "gulp-eslint": "^5.0.0"
   },
   "dependencies": {
-    "gulp": "^4.0.0",
-    "gulp-eslint": "^5.0.0",
     "jsonschema": "^1.2.4"
   }
 }
