--- a/.editorconfig
+++ b/.editorconfig
@@ -2,9 +2,9 @@ root = true
 
 charset = utf-8
 
-indent_style = tab
+indent_style = space 
 
-tab_width = 4
+tab_width = 2
 
 trim_trailing_whitespace = true
 
