--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
   "author": "Tibor Udvari <tudvari@tudvari.com> (https://tudvari.com)",
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^5.16.0",
+    "eslint": "5.16.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "mocha": "6.2.2",
+    "eslint-plugin-import": "2.18.2",
+    "mocha": "7.0.1",
     "nyc": "^15.0.0",
     "should": "13.2.3"
   },
