--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
   "author": "Tibor Udvari <tudvari@tudvari.com> (https://tudvari.com)",
   "license": "MIT",
   "devDependencies": {
-    "eslint": "5.16.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "2.18.2",
+    "eslint": "7.0.0-alpha.2",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "2.20.1",
     "mocha": "7.1.0",
     "nyc": "^15.0.0",
     "should": "13.2.3"
