--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "mocha": "8.0.1",
     "nyc": "^15.1.0",
     "should": "13.2.3",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1"
   },
   "dependencies": {
     "jsonschema": "^1.2.6"
