--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "eslint": "7.12.1",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "2.22.1",
-    "mocha": "8.2.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "mocha": "8.2.1",
     "nyc": "^15.1.0",
-    "should": "13.2.3",
-    "eslint-plugin-jsx-a11y": "^6.4.1"
+    "should": "13.2.3"
   },
   "dependencies": {
     "jsonschema": "^1.4.0"
