--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "generate-tests": "./node_modules/mocha/bin/mocha generateTests.js",
     "convertjson-tests": "./node_modules/mocha/bin/mocha convertToJSONTests.js",
     "coverage": "nyc npm run test",
-    "test": "./node_modules/mocha/bin/mocha.js *Tests.js",
+    "test": "./node_modules/mocha/bin/mocha.js ./tests/*Tests.js",
     "test-single": "./node_modules/mocha/bin/mocha.js $1",
     "lint": "./node_modules/eslint/bin/eslint.js -c .eslintrc.js ."
   },
