--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "author": "Tibor Udvari <tudvari@tudvari.com> (https://tudvari.com)",
   "license": "MIT",
   "devDependencies": {
-    "eslint": "8.30.0",
+    "eslint": "^8.30.0",
+    "eslint-config-google": "^0.14.0",
     "mocha": "10.2.0",
     "nyc": "^15.1.0",
     "should": "13.2.3"
