--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [24, 25, 26]
+        node-version: [24, 25]
 
     steps:
     - uses: actions/checkout@v5
